<resources>
    <string name="app_name">Meal Card Authenticaon</string>
    <string name="images">images</string>
    <string name="department">Department:</string>
    <string name="logout">Logout</string>
    <string name="documents">Documents</string>
    <string name="qr">QR</string>
    <string name="lost_item">Lost Item</string>
    <string name="home">Home</string>
    <string name="remark_user">Remark user</string>
    <string name="lost_id">Lost ID</string>
    <string name="upcoming">Upcoming</string>
    <string name="my_tasks">My tasks</string>
    <string name="welcome_back">Welcome back</string>
    <string name="meal_card_authentication">Meal Card Authentication</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="about_meal_card_authentication">About Meal Card Authentication</string>
    <string name="mainText">The Meal Card Authentication system is a secure and efficient digital platform designed for Mekelle University cafe to access their meal services with ease. This app streamlines the authentication process, eliminating the need for manual verification while ensuring a fast and hassle-free dining experience.</string>
    <string name="go_back">Go Back</string>
    <string name="main_logo">Main Logo</string>
    <string name="login">Login</string>
    <string name="all_in_one">All-in-One</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Passkey">Passkey</string>
    <string name="singin">Singin</string>
    <string name="register_lost_item">Register Lost Item</string>
    <string name="mekelle_university">Mekelle University</string>
    <string name="student_ids">Student IDs</string>
    <string name="info_of_lost_item">Info of Lost Item</string>
    <string name="mekelle_university_id">Mekelle University ID</string>
    <string name="academic_year">Academic Year</string>
    <string name="submit">Submit</string>
    <string name="he_or_she_have_already_authenticated_for_this_meal_today">He or She have already authenticated for this meal today</string>
    <string name="today_menu">Today Menu</string>
    <string name="_02_05_2025">02-05-2025</string>
    <string name="_11_30_01_00_dinner">11:30-01:00 Dinner</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="_06_30_08_40_lunch">06:30-08:40 Lunch</string>
    <string name="_01_30_03_40_break_fast">01:30-03:40 Break Fast</string>
    <string name="next">Next</string>
    <string name="the_student_has_been_marketed_or_reported">The Student has been Marketed or Reported</string>
</resources>