<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayoutVertical1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/splash_bg" >

        <LinearLayout
            android:id="@+id/LinearLayoutVertical1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:id="@+id/MainLogo"
                android:layout_width="268dp"
                android:layout_height="239dp"
                android:contentDescription="@string/main_logo"
                android:src="@drawable/splash" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/DtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/all_in_one"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Mobile Number"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/mobile_number" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:autofillHints="Passkey"
                android:ems="10"
                android:inputType="numberPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/Passkey" />
            <Button
                android:id="@+id/btnSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singin"
                android:backgroundTint="#39465F"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/FooterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/meal_card_authentication"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/FooterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_1_0_0"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
