<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/UserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#acbbce"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_lost_item"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/UserProfileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/images"
            android:src="@drawable/user" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tasksSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/topSection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/card3"
            android:orientation="horizontal"
            android:padding="27dp">

            <ImageView
                android:id="@+id/lostIcon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/images"
                android:src="@drawable/lost" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/universityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mekelle_university"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/studentIDs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_ids"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lostItemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/info_of_lost_item"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/card4"
                android:orientation="vertical"
                android:padding="27dp">

                <EditText
                    android:id="@+id/mekelleUniversityId"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="Mekelle University ID"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/mekelle_university_id" />

                <EditText
                    android:id="@+id/academicYear"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Academic Year"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/academic_year" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="#3A6A97"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/btnLostItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/lost_item"
            android:src="@drawable/icon2on" />

        <ImageView
            android:id="@+id/btnQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/qr"
            android:scaleType="centerInside"
            android:src="@drawable/qr" />

        <ImageView
            android:id="@+id/btnAppInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/documents"
            android:src="@drawable/info" />

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/logout"
            android:src="@drawable/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>