<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayoutVertical1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/waring_bg" >

        <LinearLayout
            android:id="@+id/LinearLayoutVertical1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:id="@+id/studentImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/images"
                android:src="@drawable/waring" />

            <TextView
                android:id="@+id/FooterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:text="@string/the_student_has_been_marketed_or_reported"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center" />


        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
